language/move-lang/tests/move_check/translated_ir_tests/move/signer/transitive.exp
error: 

   ┌── tests/move_check/translated_ir_tests/move/signer/transitive.move:7:13 ───
   │
 7 │         let x = S<signer> { f: s };
   │             ^ Unused assignment or binding for local 'x'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_x')
   │

error: 

   ┌── tests/move_check/translated_ir_tests/move/signer/transitive.move:7:35 ───
   │
 7 │         let x = S<signer> { f: s };
   │                                   ^ Invalid return
   ·
 7 │         let x = S<signer> { f: s };
   │             - The local 'x' still contains a resource value due to this assignment. The resource must be consumed before the function returns
   │

